@@ -473,10 +473,15 @@ recv_row_selected (GtkWidget * clist, gint row, gint column,
 static void
 browse_folder (char *dir)
 {
+#ifdef WIN32
+	/* no need for file:// in ShellExecute() */
+	fe_open_url (dir);
+#else
 	char buf[512];
 
 	snprintf (buf, sizeof (buf), "file://%s", dir);
-	goto_url (buf);
+	fe_open_url (buf);
+#endif
 }
 
 static gboolean
